myingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
spec:
  ingressClassName: nginx
  rules:
  - host: bj.nalempinfotech.net
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: springapp
            port:
              number: 80
  - host: bk.nalempinfotech.net
    http:
      paths:
      - pathType: Prefix
        path: /maven-web-app
        backend:
          service:
            name: appsvc
            port:
              number: 80
  - host: sk.nalempinfotech.net
    http:
      paths:
      - pathType: Prefix
        path: /java-web-app
        backend:
          service:
            name: javasvc
            port:
              number: 80
